# agent-sdk

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  Makefile  README.md  image_report.md  pyproject.toml  review_on_surgical_condenser_pr.md  run_with_local_litellm.sh  test_formatting.py
openhands-tools/: pyproject.toml
openhands-tools/openhands/tools/: __init__.py
openhands-tools/openhands/tools/browser_use/: __init__.py  definition.py  impl.py  logging_fix.py  server.py
openhands-tools/openhands/tools/cat_on_steroids/: __init__.py  definition.py  experiment_results.md  impl.py  pdf_to_dict.py  preprocessor.py  sanitize_utf8.py  tests.py  utils.py
openhands-tools/openhands/tools/delegate/: __init__.py  definition.py  impl.py  visualizer.py
openhands-tools/openhands/tools/execute_bash/: __init__.py  constants.py  definition.py  impl.py
openhands-tools/openhands/tools/file_editor/: definition.py  editor.py  impl.py
openhands-tools/openhands/tools/glob/: definition.py  impl.py
openhands-tools/openhands/tools/grep/: definition.py  impl.py
openhands-tools/openhands/tools/memory/: __init__.py  definition.py  impl.py
openhands-tools/openhands/tools/planning_file_editor/: definition.py  (+1 more)
openhands-workspace/: pyproject.toml
openhands-workspace/openhands/workspace/: __init__.py
openhands/agent_server/: README.md  __init__.py  __main__.py  agent-server.spec  api.py  bash_router.py  bash_service.py  config.py  conversation_router.py  conversation_service.py  dependencies.py  env_parser.py  event_router.py  event_service.py  file_router.py  middleware.py  models.py  openapi.py  pub_sub.py  pyproject.toml  server_details_router.py  sockets.py  tool_router.py  utils.py  vscode_router.py  vscode_service.py
openhands/agent_server/docker/: Dockerfile  build.py  build.sh
openhands/sdk/: __init__.py  logger.py  pyproject.toml
openhands/sdk/agent/: __init__.py  agent.py  base.py  spec.py
openhands/sdk/config/: __init__.py  llm_config.py  mcp_config.py
openhands/sdk/context/: README.md  __init__.py  agent_context.py  env_context.py  manager.py  message_context.py  view.py
openhands/sdk/conversation/: __init__.py  base.py  conversation.py  conversation_stats.py  event_store.py  events_list_base.py  secret_source.py  secrets_manager.py  state.py  stuck_detector.py  types.py  visualizer.py
openhands/sdk/event/: __init__.py  base.py  condenser.py  conversation_state.py  llm_convertible.py  metric_events.py  user_action.py  utils.py
openhands/sdk/io/: __init__.py  base.py  local.py  memory.py
openhands/sdk/llm/: __init__.py  llm.py  llm_registry.py  message.py  metadata.py
openhands/sdk/logger/: logger.py
openhands/sdk/mcp/: __init__.py  client.py  definition.py  tool.py  utils.py
openhands/sdk/preset/: __init__.py  default.py
openhands/sdk/sandbox/: __init__.py  docker.py  port_utils.py
openhands/sdk/security/: analyzer.py  confirmation_policy.py  llm_analyzer.py  risk.py
openhands/sdk/tool/: __init__.py  registry.py  schema.py  security_prompt.py  spec.py  tool.py
openhands/sdk/utils/: __init__.py  async_executor.py  async_utils.py  command.py  discriminated_union.py  models.py  protocol.py  truncate.py  visualize.py
openhands/sdk/workspace/: __init__.py  base.py  local.py  remote.py  workspace.py
openhands/workspace/: __init__.py  pyproject.toml
openhands/workspace/docker/: workspace.py
openhands/workspace/remote_api/: workspace.py
(+1057 files in other folders)
