[project]
name = "openhands-workspace"
version = "1.7.2"
description = "OpenHands Workspace - Docker and container-based workspace implementations"

requires-python = ">=3.12"
dependencies = [
    "openhands-sdk",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["openhands.workspace*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed"]
