[project]
name = "openhands-sdk"
version = "1.0.0"
description = "OpenHands SDK - Core functionality for building AI agents"

requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "litellm>=1.75.9",
    "pydantic>=2.11.7",
    "python-frontmatter>=1.1.0",
    "python-json-logger>=3.3.0",
    "tenacity>=9.1.2",
    "websockets>=12",
]

[project.optional-dependencies]
boto3 = ["boto3>=1.35.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["../.."]
include = ["openhands*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.j2"]
